=======
CHANGES
=======

0.6.0 (Unreleased)
==================

- Pyramid 1.4 compatibility

- Removed `ptah.adapter` decorator

Features
--------

- amd js

- handlebars

- handlebars i18n


0.5.1 (2012-05-04)
==================

- Fixed js datetime widget #134


0.5.0 (2012-05-03)
==================

Features
--------

- Split ptah.cms to external package

- Move TypeInformation to ptah

- ptah.Type changed to @ptah.type class decorator

- Sphinx and Pygments are optional

- alembic 0.3.2

- CKEditor 3.6.3


0.4.2 (2012-04-23)
==================

Bug fixes
---------

- venusian 1.0a6 compatibility


0.4.1 (2012-04-16)
==================

Bug fixes
---------

- venusian 1.0a4 compatibility


0.4.0 (2012-04-06)
==================

Features
--------

- Added html5 file api support in FileField

- alembic 0.2.x

- twitter bootstrap 2.0

- CKEditor (instead of tinymce)


0.3.3 (2012-01-31)
==================

Features
--------

- Added `ptah.enable_modules` setting, list of enabled
  management modules.

- Require alembic 0.1.1


Bug fixes
---------

- Encode `content-type` header for blob `data` rest action

- Do not use `request` for application factories in
  `applications` rest action. It brakes security for current root object.


0.3.2 (2012-01-20)
==================

- JQuery 1.7.1


Bug fixes
---------

- Check migration version information only if sqla 
  has been configured.

- Run ptah.shutdown() before exit from process.


0.3.1 (2012-01-19)
==================

Features
--------

- Added ``voc_factory`` attribute to ``VocabularyField``


Bug fixes
---------

- Stop process if current revisions are 
  different from head revisions.

- Execute ``POPULATE_DB_SCHEMA`` populate step
  instead of all populate steps during migration.


0.3.0 (2012-01-12)
==================

Features
--------

- Added data migration subsystem. It is documented
  in the "Data migration" chapter.

- Added data population subsystem. It is documented
  in the "Data population" chapter.